fixed mobile modal & overflow issues

--- a/client/src/components/Modal/Modal.module.less
+++ b/client/src/components/Modal/Modal.module.less
@@ -9,18 +9,19 @@
   left: 0;
   z-index: 50;
   background-color: #171717a1;
-  overflow: auto;
-  padding: 60px 0px;
+  overflow-y: auto;
+  padding: 40px;
   display: flex;
   justify-content: center;
   backdrop-filter: blur(2px);
   align-items: center;
+  overflow-x: hidden;
 }
 
 .container {
   border: 3px solid @cyan-10;
+  position: absolute;
   border-radius: 0.625rem;
-  width: 80%;
   background-color: #edf2f4;
 }
 
@@ -39,6 +40,7 @@
   color: white !important;
   top: 50%;
   left: 50%;
+	white-space: nowrap;
   transform: translate(-50%, -50%);
 }
 
@@ -52,16 +54,28 @@
 .content {
   width: 100%;
   padding: 40px 20px;
+  display: flex;
+  justify-content: center;
 }
 
 @media screen {
   @media (max-width: 576px) {
     .wrapper {
       position: fixed;
+      top: 0px;
+      left: 0px;
+      align-items: start;
+      justify-content: start;
+      padding: 0px;
     }
 
     .container {
       width: 100%;
+      border-radius: 0;
+    }
+
+    .content {
+      padding: 40px 10px;
     }
   }
 }
