--- a/client/src/components/boxes/BoxData/BoxDataForm/BoxDataForm/BoxDataForm.module.less
+++ b/client/src/components/boxes/BoxData/BoxDataForm/BoxDataForm/BoxDataForm.module.less
@@ -8,6 +8,18 @@
   justify-content: space-evenly;
 }
 
+@media screen {
+  @media (max-width: 576px) {
+    .columns {
+      flex-direction: column;
+    }
+
+    .submitContainer {
+      margin-top: 15px;
+    }
+  }
+}
+
 .sum {
   padding: 0.2rem 1rem 0.375rem 1rem;
   display: flex;
