--- a/client/src/components/boxes/BoxData/BoxDataForm/BoxDataFormColumn/BoxDataFormColumn.module.less
+++ b/client/src/components/boxes/BoxData/BoxDataForm/BoxDataFormColumn/BoxDataFormColumn.module.less
@@ -8,6 +8,16 @@
   margin-left: 15px;
 }
 
+@media screen {
+  @media (max-width: 576px) {
+    .container {
+      width: 100%;
+      margin-left: 0px;
+      margin-top: 15px;
+    }
+  }
+}
+
 .columnNames {
   border-bottom: 2px solid #000;
   width: 100%;
