--- a/client/src/components/boxes/BoxData/BoxDataOverview/ContentColumns/ContentColumns.module.less
+++ b/client/src/components/boxes/BoxData/BoxDataOverview/ContentColumns/ContentColumns.module.less
@@ -89,3 +89,16 @@
     height: 100%;
   }
 }
+
+@media screen {
+  @media (max-width: 576px) {
+    .contentColumn {
+      width: 100%;
+    }
+
+    .contentColumns {
+      flex-direction: column;
+      width: 80%;
+    }
+  }
+}
